--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -35,7 +35,7 @@
 }
 
 .dot.active {
-  background-color: #3897f0; /* Cor azul para o dot ativo */
+  background-color: #3897f0; 
 }
 
 .post-actions {
@@ -49,14 +49,14 @@
   background: none;
   border: none;
   cursor: pointer;
-  font-size: 1.1em; /* Tamanho dos ícones e texto */
+  font-size: 1.1em; 
   margin-right: 12px;
   padding: 4px;
   display: inline-flex;
   align-items: center;
 }
 .action-buttons .action-button .icon {
-  font-size: 1.4em; /* Tamanho dos ícones um pouco maior */
+  font-size: 1.4em; 
   margin-right: 4px;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .ver-mais {
-  color: #8e8e8e; /* Cinza para o "ver mais" */
+  color: #8e8e8e; 
   cursor: pointer;
   font-weight: 500;
 }
@@ -86,7 +86,6 @@
   display: inline-block;
 }
 
-/* Em telas maiores, os posts não precisam ocupar a largura toda se o container principal for limitado */
 @media (min-width: 768px) {
   .post-card {
     border-radius: 8px; /* Um pouco mais arredondado no desktop */
@@ -94,7 +93,6 @@
   }
 }
 
-/* ... (seus estilos anteriores do PostCard.css) ... */
 
 .post-card-link-title,
 .post-card-link-image {
@@ -105,8 +103,7 @@
 
 /* Específico para o link do título, caso queira um comportamento de hover sutil */
 .post-card-link-title:hover .post-location {
-  /* Exemplo: text-decoration: underline; */
-  /* Ou uma leve mudança de cor se preferir */
+  /* text-decoration: underline; */
 }
 
 .ver-mais-link {
